[fix] local/prod
