# openapi.yaml
@@ -24,6 +24,12 @@ paths:
               schema:
                 type: string
                 example: geeq-session-id=abcde12345; Path=/; HttpOnly
+        '401':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Common401Response"
   /auth/logout:
     post:
       responses:
